--- a/CryptoGambling.Web/appsettings.json
+++ b/CryptoGambling.Web/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CryptoGambling.Web;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "UserIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CryptoGambling.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Connection": "Server=(localdb)\\mssqllocaldb;Database=CryptoGambling.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
