Games added (mines and dice).Bug fixed in Game class

--- a/CryptoGambling.Web/CryptoGambling.Web.csproj
+++ b/CryptoGambling.Web/CryptoGambling.Web.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\diceGame.js~RF2f7c25b1.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
